pkg/lang/testdata/ub/config/valid/input-interpolation-static.ub
inputs: { s: $'n={{1}}' }
