pkg/lang/testdata/ub/config/invalid/input-reference-in-interpolation.ub
inputs: { s: $'v={{var.x}}' }
